--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "TechnoStrike RFG V0.sln"
+    "dotnet.defaultSolution": "TechnoStrike-RFG.sln"
 }
